# catalogue_vehicules

./: .gitignore  conf.py  index.rst  mkdocs.yml  pyproject.toml
src/catalogue_vehicules/: main.py
src/catalogue_vehicules/core/interfaces/: engine.py  vehicle.py
src/catalogue_vehicules/core/interfaces/models/: engine.py  vehicle.py
src/catalogue_vehicules/core/interfaces/services/: engine_service.py  vehicule_service.py
src/catalogue_vehicules/database/: database.py
src/catalogue_vehicules/models/engines/: diesel_engine.py  electric_engine.py  gasoline_engine.py  hybrid_engine.py
src/catalogue_vehicules/models/vehicles/: car.py  moto.py  truck.py
src/catalogue_vehicules/routers/: engine.py  vehicule.py
src/catalogue_vehicules/schemas/: vehicule.py
src/catalogue_vehicules/services/: car_service.py  moto_service.py  trunk_service.py
src/catalogue_vehicules/services/engine/: diesel_engine_service.py  electric_engine_service.py  gasoline_engine_service.py  hybrid_engine_service.py
src/catalogue_vehicules/services/vehicle/: car_service.py  moto_service.py  trunk_service.py
src/catalogue_vehicules/utils/: utils.py
src/catalogue_vehicules/utils/validators/: car_validator.py  moto_validator.py  truck_validator.py
tests/: test_car_integration.py  test_moto_integration.py  test_truck_integration.py  test_unit.py
