[project]
name = "catalogue-vehicules"
version = "0.1.0"
description = ""
authors = [
    {name = "mrsxnshxne",email = "jean.gabriel.trousseau12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "catalogue_vehicules", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
