[project]
name = "catalogue-vehicules"
version = "0.1.0"
description = ""
authors = [
    {name = "mrsxnshxne",email = "jean.gabriel.trousseau12@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "catalogue_vehicules", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
