[project]
name = "catalogue-vehicules"
version = "0.1.0"
description = ""
authors = [
    {name = "mrsxnshxne"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydocstyle (>=6.3.0,<7.0.0)",
    "sphinx (==8.1.3)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.23,<10.0.0)",
    "mkdocstrings (>=0.30.1,<0.31.0)",
    "fastapi (>=0.120.4,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "catalogue_vehicules", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
